Changed topnav overflow from  to ; resolved the non-showing dropdown issue!

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
  /* Navbar */
  .topnav {
     background-color: #ffffff;
-    overflow: hidden;
+    overflow: visible;
     position: sticky;
     top: 0;
     text-align: center;
